--- a/scss/_dashboard.scss
+++ b/scss/_dashboard.scss
@@ -8,7 +8,7 @@
 .dash-board {
   display: flex;
   flex-flow: row wrap;
-  max-width: rem(1260px);
+  // max-width: rem(1260px);
   background-color: #f0f1f6;
   .row {
     flex: 1;
@@ -290,6 +290,33 @@
       font-size: rem(14px);
       color: #353535;
     }
+  }
+}
+.calendar {
+  width: 100%;
+  tr {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  td {
+    width: rem(30px);
+    height: rem(30px);
+    border-radius: 100%;
+    line-height: rem(30px);
+    text-align: center;
+  }
+  thead {
+    .calendar__header {
+      justify-content: center;
+    }
+  }
+  &__year {
+  }
+  &__month {
+  }
+  .choice {
+    background-color: #146fd3;
   }
 }
 
