--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,8 +10,8 @@ $dark: #141414 !default;
 $light: #989898 !default;
 
 // Override Bootstrap font variables
-$font-family-sans-serif: "NanumSquare", "S-Core" !default;
-$sub-font-family: "NanumSquare", "S-Core" !default;
+$font-family-sans-serif: "NanumSquare", "S-Core", "Lato" !default;
+$sub-font-family: "NanumSquare", "S-Core", "Lato" !default;
 $body-bg: #fff;
 $body-color: #222;
 $line-height-base: 1;
