--- a/scss/_dashboard.scss
+++ b/scss/_dashboard.scss
@@ -28,7 +28,7 @@
   display: flex;
   flex-flow: row wrap;
   max-width: rem(1260px);
-  margin: 0 auto;
+  margin: rem(128px) auto rem(168px) auto;
   // background-color: #f0f1f6;
   .row {
     flex: 1;
