--- a/scss/_dashboard.scss
+++ b/scss/_dashboard.scss
@@ -135,12 +135,17 @@
     flex: 1;
     max-width: 100%;
     padding-bottom: rem(16px);
+    justify-content: space-between;
     .box {
-      min-width: rem(400px);
-      margin-left: rem(12px);
+      // min-width: rem(400px);
+      width: 100%;
+      margin: 0 rem(6px);
       text-align: center;
       &:first-child {
         margin-left: 0;
+      }
+      &:last-child {
+        margin-right: 0;
       }
       .item {
         padding: rem(48px) rem(40px) rem(32px) rem(40px);
@@ -170,8 +175,12 @@
     }
   }
   .box {
+    margin-top: rem(20px);
     border-radius: rem(10px);
     background-color: #ffffff;
+    &:first-child {
+      margin-top: 0;
+    }
     &__header {
       display: flex;
       flex-flow: row wrap;
@@ -242,11 +251,6 @@
 }
 
 .remit {
-  // flex: 0 0 31.746%;
-  // max-width: 31.746%;
-  // width: rem(400px);
-  // height: 38.5625rem;
-  // padding: rem(36px) rem(24px);
   &__title {
     // margin: 0 0 rem(24px) 0;
     font-size: rem(21px);
@@ -402,30 +406,13 @@
 
 // 총 송금액 (년월별)
 .remit-comparison {
-  height: rem(552px);
-  // width: rem(500px);
-  // padding: rem(40px) rem(20px);
-  &__title {
-    // font-family: 'NanumSquare';
-    font-size: rem(21px);
-    color: #353535;
-    &__wrap {
-      display: flex;
-      align-items: center;
-      margin-bottom: rem(20px);
-      .segment {
-        flex: none;
-        margin-left: auto;
-      }
-    }
-  }
 }
 
 // 달력
 .remit-schedule {
-  // width: rem(284px);
-  // padding: rem(36px) rem(10px) rem(20px) rem(10px);
+  padding-top: rem(40px);
   &__list {
+    margin-top: rem(24px);
   }
   &__item {
     padding: rem(16px) rem(8px) rem(12px) rem(8px);
@@ -454,24 +441,64 @@
 }
 .calendar {
   width: 100%;
+  &__header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: rem(24px);
+  }
+  &__title {
+    font-size: rem(21px);
+  }
+  &__prev {
+  }
+  &__next {
+  }
+  &__body {
+    width: inherit;
+  }
+  &__week {
+    font-size: rem(14px);
+    td {
+      text-align: center;
+    }
+    .active {
+      border-radius: 100%;
+      color: #ffffff;
+      background-color: #146fd3;
+    }
+  }
+  .sunday {
+    color: #d62148;
+  }
   tr {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  tbody,
-  .calendar__week {
+  // tbody,
+  // .calendar__week {
+  //   td {
+  //     width: rem(30px);
+  //     height: rem(30px);
+  //     border-radius: 100%;
+  //     line-height: rem(30px);
+  //     text-align: center;
+  //   }
+  // }
+  thead {
+    .calendar__week {
+      font-weight: bold;
+    }
+    .calendar__header {
+      justify-content: center;
+    }
+  }
+  tbody {
     td {
       width: rem(30px);
       height: rem(30px);
-      border-radius: 100%;
       line-height: rem(30px);
-      text-align: center;
-    }
-  }
-  thead {
-    .calendar__header {
-      justify-content: center;
     }
   }
   &__year {
@@ -485,24 +512,10 @@
 
 // 송금 현황
 .remit-status {
-  // width: rem(380px);
-  // padding: rem(36px) rem(10px) rem(16px) rem(10px);
-  &__title {
-    font-size: rem(21px);
-    vertical-align: middle;
-    color: #353535;
-    &__wrap {
-      display: flex;
-      align-items: center;
-      margin-bottom: rem(24px);
-    }
-  }
   &__unit {
     margin-left: rem(20px);
     font-size: rem(14px);
     vertical-align: middle;
-  }
-  .left {
   }
   button {
     flex: none;
@@ -544,18 +557,6 @@
 
 // 송금국가 순위
 .remit-rank {
-  // width: rem(500px);
-  // padding: rem(36px) rem(30px) rem(16px) rem(30px);
-  &__title {
-    font-size: rem(21px);
-    vertical-align: middle;
-    color: #353535;
-    &__wrap {
-      display: flex;
-      align-items: center;
-      margin-bottom: rem(24px);
-    }
-  }
   &__container {
   }
 }
@@ -565,10 +566,11 @@
     padding-left: unset;
   }
   .dash-board {
-    // padding: 0 rem(12px);
     .overflow-x-auto {
+      justify-content: unset;
       .box {
         min-width: rem(240px);
+        width: fit-content;
         margin-left: rem(10px);
         text-align: center;
         .item {
@@ -591,7 +593,6 @@
     .box {
       width: 100%;
       margin-top: rem(20px);
-      // margin: rem(20px) rem(12px) 0 rem(12px);
     }
   }
 
