--- a/scss/_dashboard.scss
+++ b/scss/_dashboard.scss
@@ -282,9 +282,24 @@
         height: rem(40px);
         margin: 0 rem(8px) 0 0;
         border-radius: 100%;
+        background-position: 50% 50%;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-color: #bebebe;
         transform: translateY(-50%);
         content: "";
+      }
+      &.krw {
+        &::before {
+          background-image: url(../images/renewal/flag-korea@3x.png);
+          background-color: transparent;
+        }
+      }
+      &.aud {
+        &::before {
+          background-image: url(../images/renewal/flag-22-aud@3x.png);
+          background-color: transparent;
+        }
       }
     }
     &__content {
@@ -317,7 +332,7 @@
     overflow: hidden;
     margin-top: rem(10px);
     // border-left: rem(2px) dotted #d4d4d4;
-    max-height: rem(150px);
+    // max-height: rem(150px);
     &::before {
       position: absolute;
       top: 50%;
@@ -449,6 +464,7 @@
   }
   &__title {
     font-size: rem(21px);
+    text-align: center;
   }
   &__prev {
   }
@@ -584,15 +600,32 @@
     width: 100%;
     height: rem(70px);
     .navbar-toggler {
-      margin-left: unset;
+      margin-left: rem(20px);
     }
     .my-page-button {
+      margin-right: rem(20px);
       margin-left: auto;
+    }
+  }
+  .han-content {
+    .container-fluid {
+      padding: 0;
+      .dash-board {
+        margin: rem(30px) auto rem(52px) auto;
+        > div,
+        > strong {
+          &:not(.overflow-x-auto) {
+            padding: 0 rem(10px);
+          }
+        }
+      }
     }
   }
   .dash-board {
     .overflow-x-auto {
       justify-content: unset;
+      padding-right: rem(10px);
+      padding-left: rem(10px);
       .box {
         min-width: rem(240px);
         width: fit-content;
@@ -690,7 +723,6 @@
 .han-sidebar {
   order: 0;
   border-bottom: 1px solid #e6ecf1;
-  // background-color: #f5f7f9;
   background-color: #ffffff;
   .navbar-brand {
     margin: rem(40px) auto;
@@ -701,6 +733,11 @@
     width: rem(180px);
     height: rem(26px);
     background-image: url(../images/hanpass-logo-180x30-000-3x.png);
+  }
+  .navbar-toggler-icon {
+    width: rem(40px);
+    height: rem(40px);
+    background-image: url(../images/renewal/icons-2021-main-ico-menu@3x.png);
   }
 }
 .my-page-button {
@@ -849,6 +886,17 @@
   .han-notice {
     margin-left: rem(30px);
     font-size: rem(16px);
+    vertical-align: middle;
+    &__tag {
+      display: inline-block;
+      margin-right: rem(12px);
+      padding: 0 rem(24px);
+      border: 1px solid #353535;
+      border-radius: rem(8px);
+      font-size: rem(14px);
+      font-style: normal;
+      line-height: rem(28px);
+    }
   }
   .corp-info {
     flex: none;
